--- a/indext.HTML
+++ b/indext.HTML
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>To-Do List</title>
+    <title>To-Do List </title>
+    <link rel="icon" href="picture/WhatsApp Image 2024-12-13 at 20.07.15_6b950edb.jpg" type="image/png">
+
+    
 
     <!-- Styles -->
     <link rel="stylesheet" href="style.css" />
@@ -13,7 +16,7 @@
 
 <body>
     <main class="box">
-        <h3>Add Your Task</h3>
+        <h3>Add Your Task</h3>  
 
         <!-- Input Section -->
         <div class="input-area">
